# vibemode

./: .gitignore  AGENTS.md  CHANGELOG.md  HANDOFF.md  Install-NeuroGate-API.bat  Install-Vibemod.bat  Install-Vibemode.bat  LICENSE  PROJECT_STATE.md  README.md  SECURITY.md  pyproject.toml  security_best_practices_report.md
.github/workflows/: ci.yml
docs/: AI_INSTALL_PROMPT.md  AI_MAINTAINER_PROMPT.md  ARCHITECTURE.md  PRIVACY.md  PUBLISHING.md
scripts/: check-api-contract.py  check.bat  check.ps1  check.sh  create-desktop-shortcut.bat  create-desktop-shortcut.ps1  create-desktop-shortcut.sh  diagnose-resume.ps1  install-macos-runtime.sh  install.bat  install.ps1  install.sh  launch-overlay-detached.sh  package-release.ps1  run-once.bat  run-once.ps1  run-once.sh  run-overlay.bat  run-overlay.ps1  run-overlay.sh  update-and-restart.bat  update-and-restart.ps1  update-and-restart.sh
src/neurogate_usage_overlay/: __init__.py  __main__.py  browser_reader.py  history.py  json_store.py  log_utils.py  macos_popover.py  macos_power.py  models.py  overlay.py  parser.py  popover_server.py  projection.py  reader_worker.py  resume_recovery.py  single_instance.py  update_checker.py  vibemode_parser.py  win32_power.py  win32_window.py
tests/: test_browser_reader.py  test_history.py  test_json_store.py  test_log_utils.py  test_main.py  test_overlay.py  test_parser.py  test_popover_server.py  test_power_events.py  test_projection.py  test_reader_worker.py  test_resume_recovery.py  test_scripts.py  test_single_instance.py  test_update_checker.py  test_win32_window.py
