[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibemod"
version = "2.0"
description = "Vibemod overlay for VibeMode API usage limits (Windows & macOS)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vibemod contributors" }]
keywords = ["vibemode", "api", "overlay", "usage", "windows", "macos", "playwright"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "playwright>=1.44",
]

[project.optional-dependencies]
macos = ["pyobjc-framework-Cocoa>=10.0", "pyobjc-framework-WebKit>=10.0"]

[project.urls]
Homepage = "https://github.com/RyandavisProject/vibemod"
Issues = "https://github.com/RyandavisProject/vibemod/issues"

[project.scripts]
vibemod = "neurogate_usage_overlay.__main__:main"
neurogate-overlay = "neurogate_usage_overlay.__main__:main"
neurogate-api = "neurogate_usage_overlay.__main__:main"
vibemode-overlay = "neurogate_usage_overlay.__main__:main"
neurogate-usage-overlay = "neurogate_usage_overlay.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
